--- a/portal-web/trunk/src/main/webapp/less/popovers.less
+++ b/portal-web/trunk/src/main/webapp/less/popovers.less
@@ -107,7 +107,7 @@
   width: @width; 
   text-align: left;
 
-  z-index: 1000;
+  z-index: 100000;
 
   .disable-selection();
 
